# bcd-clock

./: .gitmodules  Bootsel.cpp  Bootsel.h  CMakeLists.txt  CMakePresets.json  Fsm.h  Kwm30881.h  MainFsm.h  Max7219.h  README.md  State.h  StateMachine.h  build.sh  main.cpp
lib/fsm/: README.md
src/: CMakeLists.txt  Kwm30881.h  MainFsm.h  MainFsmTable.h  blah.cpp  main.cpp
tools/: CMakeLists.txt  generate_dot.cpp
